# EigenpairFlow

./: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  symmetric_eigenpair_tracker.py
.github/workflows/: ci.yml
notebooks/: Symmetric_Eigenpair_Tracker.ipynb  demonstration_output.ipynb  eigenpairflow_demonstration.ipynb  large_matrix_tracking_demo.ipynb  magnitude_demonstration.ipynb  ogita_aishima_demonstration.ipynb  toy_model_demonstration.ipynb
src/eigenpairflow/: __init__.py  correction.py  graph.py  magnitude.py  main.py  ode.py  tracking.py  types.py  visualization.py
test/: test_analytical.py  test_correction.py  test_magnitude.py  test_main_function.py  test_match_decompositions.py  test_results_interface.py  test_solver_methods.py
