[tool.poetry]
name = "eigenpairflow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
scipy = "^1.7.0"
networkx = "^2.6.0"
matplotlib = "^3.4.0"
joblib = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
sympy = "^1.9"
ruff = "^0.4.4"
pre-commit = "^3.7.1"
papermill = "^2.6.0"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
