[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "eigenpairflow"
version = "0.2.0"
description = "Continuous and stable tracking of eigendecomposition for parameter-dependent matrices"
authors = [{name = "Tomoki Uda", email = "tomoki.uda@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["eigendecomposition", "eigenvalue", "eigenvector", "tracking", "numerical-methods"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "networkx>=2.6.0",
    "matplotlib>=3.4.0",
    "joblib>=1.3.2",
]

[project.urls]
Homepage = "https://github.com/t-uda/EigenpairFlow"
Repository = "https://github.com/t-uda/EigenpairFlow"

[tool.poetry]
packages = [{include = "eigenpairflow", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
sympy = "^1.9"
ruff = "^0.4.4"
pre-commit = "^3.7.1"
papermill = "^2.6.0"
ipykernel = "^6.30.1"
